Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.5.9 - 5/5/2012 - Aaron Edwards/Arnold
----------------------------------------------------------------------
- Fix problems with USPS shipping module
- Fix stripslashes issue with widget custom content
- Fix issues with single product shortcode attributes

2.5.8 - 4/26/2012 - Aaron Edwards
----------------------------------------------------------------------
- Improvements to coupon handling in PayPal Express gateway
- Add cart details to PayPal Express gateway paypal history
- Fix a bug in chained payments gateway not filling shipping/tax totals
- Internationalize various date strings on the order status pages
- Add UTF-8 BOM to csv exports http://premium.wpmudev.org/forums/topic/export-orders-csv-character-support

2.5.7 - 4/16/2012 - Aaron Edwards
----------------------------------------------------------------------
- Fix issues with PayPal chained payments gateway for sure
- Fix bug in Payflow Pro gateway: http://premium.wpmudev.org/forums/topic/marketpress-payflow-pro-not-sending-info-to-paypal
- Separate AJAX cart and checkout JS: http://premium.wpmudev.org/forums/topic/checkout-button-disappears

2.5.6 - 4/02/2012 - Aaron Edwards
----------------------------------------------------------------------
- Create MP_HIDE_MENUS define to hide store menus
- Add basic error messages for downloads
- Fix ocassional issues with chained payments gateway

2.5.5 - 3/23/2012 - Aaron Edwards
----------------------------------------------------------------------
- Fix shortcodes documentation
- Fix stripslashes issue in cart widget custom text
- Fix bug with x_delim_data in authorize.net gateway
- Fix wrong orderstatus link on global checkout confirmation page

2.5.4 - 3/19/2012 - Aaron Edwards